--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "discord-music",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "start": "npx nodemon src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Victor Ko <vk07275@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "mongoose": "^6.10.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
-  }
+  },
+  "repository": "https://github.com/VKo232/its-rough.git"
 }
