--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,12 @@
         
     },
     "files": [
-        "src/index.ts"
+        "src/index.ts",
+        "src/types.d.ts"
     ],
     "include": [
         "./**/*.ts"
-    ],
+, "src/config.ts"    ],
     "exclude": [
         "node_modules",
         "dist"
