--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Victor Ko <vk07275@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
+    "@discordjs/opus": "discordjs/opus",
     "@discordjs/voice": "^0.14.0",
     "axios": "^1.3.4",
     "discord.js": "^14.7.1",
