--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "discordjs/opus",
-    "@discordjs/voice": "^0.14.0",
+    "@discordjs/voice": "^0.15.0",
     "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "ffmpeg": "^0.0.4",
@@ -26,7 +27,9 @@
     "nodemon": "^2.0.20",
     "play-dl": "^1.9.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "youtube-search-api": "^1.1.1",
+    "youtube-search-without-api-key": "^1.1.0"
   },
   "repository": "https://github.com/VKo232/its-rough.git"
 }
